--- a/package.json
+++ b/package.json
@@ -10,18 +10,19 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
     "@tauri-apps/api": "^2",
     "@tauri-apps/plugin-opener": "^2",
-    "react-syntax-highlighter": "^15.5.0"
+    "framer-motion": "^12.23.24",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-syntax-highlighter": "^15.6.6"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.6.0",
-    "vite": "^7.0.4",
     "@tauri-apps/cli": "^2",
-    "typescript": "^5.5.0",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "@types/react-dom": "^18.0.0",
+    "@vitejs/plugin-react": "^4.6.0",
+    "typescript": "^5.5.0",
+    "vite": "^7.0.4"
   }
 }
